# The-Portfolio

./: LICENSE  README.md
C++:C#/: CMakeLists.txt
C++:C#/AnimatitingI35/: CMakeLists.txt  Highway.cpp  Highway.h  Random.cpp  Random.h  Vehicle.cpp  Vehicle.h  main.cpp
C++:C#/ChefAndWay/: CMakeLists.txt  main.cpp
C++:C#/ComplexNum/: Complex.cpp  Makefile
C++:C#/ComplexNumbers/: CMakeLists.txt  Complex.h  demo  make.deps  run_tests
C++:C#/ComplexNumbers/include/: Complex.h
C++:C#/ComplexNumbers/src/: main.cpp
C++:C#/ComplexNumbers/tests/: test_complex.cpp
C++:C#/DigitsAndWords/: CMakeLists.txt  main.cpp
C++:C#/FactorialFinder/: CMakeLists.txt  main.cpp
C++:C#/Lab3Classes/: CMakeLists.txt  People.cpp  People.h  main.cpp
C++:C#/POOL/: CMakeLists.txt  POOLBALL.cpp  POOLBALL.h  main.cpp
C++:C#/StarWarsNameGenerator/: CMakeLists.txt  main.cpp
PHP/CoinFlip Page/: index.html  index.php  main.css
Python/: README.TXT  badduck.py  bin.py  graceFace.js
Python/CodilityLessons/: Arrays.py  Counting.py  Leader.py  PrefixSums.py  Queues.py  Sorting.py  StacksAndQueues.py
Python/CodilitySolutions/: BinLen.py  Dominator.py  PermMissingElem.py  eqLeader.py  logrithimic.py  rotation.py
Python/LargeWorks/: battleship.py  calendar.py
Python/LearnPythonTheHardWay/: Ex28.txt  OffHand1.py  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex15_sample.txt  ex16.1.py  ex16.py  ex17.py  ex17_sample1.txt  ex17v2.py  ex18.py  ex19.py  ex20.py  ex3.py  (+25 more)
java/: Calculator.java  Droid.java  GradeAnalyzer.java  Library.java  README.md
javascript/: readme.txt
(+57 files in other folders)
